--- a/Model-No_Shuffle.ipynb
+++ b/Model-No_Shuffle.ipynb
@@ -331,8 +331,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Loss: 0.00161\n",
-        "('recon_loss = ', 0.00048374728)\n",
+        "Loss: 0.001483\n",
+        "('recon_loss = ', 0.00038401556)\n",
         "('saved session to ', '/home/vernwalrahul/projects/WorkSpace_Hlaton_2D/checkpoints_NS/model.ckpt')"
        ]
       },
@@ -485,7 +485,7 @@
      "collapsed": false,
      "input": [
       "# plot the latent space\n",
-      "num_viz = 200\n",
+      "num_viz = 2000\n",
       "# seed(1000)\n",
       "print(\"c_test.shape = \",c_test.shape)\n",
       "print(\"c_train.shape = \",c_train.shape)\n",
@@ -521,7 +521,7 @@
       "fig1 = plt.figure(figsize=(10,6), dpi=80)\n",
       "ax1 = fig1.add_subplot(111, aspect='equal')\n",
       "\n",
-      "plt.scatter(y_viz[:,0],y_viz[:,1], color=\"green\", s=20)\n",
+      "plt.scatter(y_viz[:,0],y_viz[:,1], color=\"green\", s=20, alpha=0.1)\n",
       "plt.title(str(numTrain+vizIdx)+\",\"+str(vizIdx))\n",
       "\n",
       "for i in range(10):\n",
@@ -670,7 +670,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -787,7 +787,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -853,7 +853,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -916,7 +916,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 162)\n",
+        "('no of nodes = ', 164)\n",
         "connected knn"
        ]
       },
@@ -925,7 +925,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 115, 'edges')"
+        "('removed ', 110, 'edges')"
        ]
       },
       {
@@ -933,7 +933,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 1.218311590278919)\n",
+        "('path_length = ', 1.1718678279656989)\n",
         "('count = ', 1)\n",
         "got node posns"
        ]
@@ -944,7 +944,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 185)\n",
+        "('no of nodes = ', 187)\n",
         "connected knn"
        ]
       },
@@ -953,7 +953,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 101, 'edges')"
+        "('removed ', 107, 'edges')"
        ]
       },
       {
@@ -961,7 +961,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 1.1970266427491114)\n",
+        "('path_length = ', 1.2151614562400337)\n",
         "('count = ', 2)\n",
         "got node posns"
        ]
@@ -972,7 +972,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 161)\n",
+        "('no of nodes = ', 171)\n",
         "connected knn"
        ]
       },
@@ -981,7 +981,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 108, 'edges')"
+        "('removed ', 110, 'edges')"
        ]
       },
       {
@@ -989,7 +989,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', None)\n",
+        "('path_length = ', 1.1634431354093144)\n",
         "('count = ', 3)\n",
         "got node posns"
        ]
@@ -1009,7 +1009,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 107, 'edges')"
+        "('removed ', 104, 'edges')"
        ]
       },
       {
@@ -1028,7 +1028,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 178)\n",
+        "('no of nodes = ', 170)\n",
         "connected knn"
        ]
       },
@@ -1037,7 +1037,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 109, 'edges')"
+        "('removed ', 108, 'edges')"
        ]
       },
       {
@@ -1045,8 +1045,36 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 0.9833107453200306)\n",
+        "('path_length = ', 0.9289617729560509)\n",
         "('count = ', 5)\n",
+        "got node posns"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "connecting knn\n",
+        "('no of nodes = ', 176)\n",
+        "connected knn"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('removed ', 85, 'edges')"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "('path_length = ', None)\n",
+        "('count = ', 6)\n",
         "got node posns"
        ]
       },
@@ -1065,34 +1093,6 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 84, 'edges')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "('path_length = ', 1.244245089901215)\n",
-        "('count = ', 6)\n",
-        "got node posns"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "connecting knn\n",
-        "('no of nodes = ', 168)\n",
-        "connected knn"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
         "('removed ', 99, 'edges')"
        ]
       },
@@ -1101,7 +1101,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 1.0309977618412147)\n",
+        "('path_length = ', 1.031911078885529)\n",
         "('count = ', 7)\n",
         "got node posns"
        ]
@@ -1112,7 +1112,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 166)\n",
+        "('no of nodes = ', 157)\n",
         "connected knn"
        ]
       },
@@ -1121,7 +1121,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 118, 'edges')"
+        "('removed ', 125, 'edges')"
        ]
       },
       {
@@ -1140,7 +1140,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 150)\n",
+        "('no of nodes = ', 161)\n",
         "connected knn"
        ]
       },
@@ -1149,7 +1149,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 100, 'edges')"
+        "('removed ', 98, 'edges')"
        ]
       },
       {
@@ -1168,7 +1168,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 167)\n",
+        "('no of nodes = ', 165)\n",
         "connected knn"
        ]
       },
@@ -1177,7 +1177,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 106, 'edges')"
+        "('removed ', 103, 'edges')"
        ]
       },
       {
@@ -1196,7 +1196,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 149)\n",
+        "('no of nodes = ', 137)\n",
         "connected knn"
        ]
       },
@@ -1205,7 +1205,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 119, 'edges')"
+        "('removed ', 117, 'edges')"
        ]
       },
       {
@@ -1213,7 +1213,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 1.075802156576058)\n",
+        "('path_length = ', 1.0283955070989743)\n",
         "('count = ', 11)\n",
         "got node posns"
        ]
@@ -1224,7 +1224,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 152)\n",
+        "('no of nodes = ', 161)\n",
         "connected knn"
        ]
       },
@@ -1233,7 +1233,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 111, 'edges')"
+        "('removed ', 110, 'edges')"
        ]
       },
       {
@@ -1252,7 +1252,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 154)\n",
+        "('no of nodes = ', 160)\n",
         "connected knn"
        ]
       },
@@ -1269,7 +1269,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 0.6219324792610125)\n",
+        "('path_length = ', 0.7080028424437519)\n",
         "('count = ', 13)\n",
         "got node posns"
        ]
@@ -1280,7 +1280,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 149)\n",
+        "('no of nodes = ', 148)\n",
         "connected knn"
        ]
       },
@@ -1289,7 +1289,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 97, 'edges')"
+        "('removed ', 93, 'edges')"
        ]
       },
       {
@@ -1297,7 +1297,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 0.5721827866989889)\n",
+        "('path_length = ', 0.752083167674103)\n",
         "('count = ', 14)\n",
         "got node posns"
        ]
@@ -1317,7 +1317,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 132, 'edges')"
+        "('removed ', 130, 'edges')"
        ]
       },
       {
@@ -1325,7 +1325,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 0.920249314079676)\n",
+        "('path_length = ', 0.9982550913744923)\n",
         "('count = ', 15)\n",
         "got node posns"
        ]
@@ -1336,7 +1336,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 176)\n",
+        "('no of nodes = ', 180)\n",
         "connected knn"
        ]
       },
@@ -1345,7 +1345,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 95, 'edges')"
+        "('removed ', 92, 'edges')"
        ]
       },
       {
@@ -1353,7 +1353,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 1.2891053696836148)\n",
+        "('path_length = ', 1.2162178101845538)\n",
         "('count = ', 16)\n",
         "got node posns"
        ]
@@ -1364,7 +1364,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 174)\n",
+        "('no of nodes = ', 173)\n",
         "connected knn"
        ]
       },
@@ -1392,7 +1392,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 188)\n",
+        "('no of nodes = ', 177)\n",
         "connected knn"
        ]
       },
@@ -1401,7 +1401,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 101, 'edges')"
+        "('removed ', 99, 'edges')"
        ]
       },
       {
@@ -1409,7 +1409,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 0.783613230439826)\n",
+        "('path_length = ', 0.8219952123008457)\n",
         "('count = ', 18)\n",
         "got node posns"
        ]
@@ -1420,7 +1420,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 174)\n",
+        "('no of nodes = ', 175)\n",
         "connected knn"
        ]
       },
@@ -1429,7 +1429,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 105, 'edges')"
+        "('removed ', 116, 'edges')"
        ]
       },
       {
@@ -1437,7 +1437,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', 0.924711168444099)\n",
+        "('path_length = ', 0.9405408301712626)\n",
         "('count = ', 19)\n",
         "got node posns"
        ]
@@ -1448,7 +1448,7 @@
        "text": [
         "\n",
         "connecting knn\n",
-        "('no of nodes = ', 155)\n",
+        "('no of nodes = ', 158)\n",
         "connected knn"
        ]
       },
@@ -1457,7 +1457,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('removed ', 120, 'edges')"
+        "('removed ', 114, 'edges')"
        ]
       },
       {
@@ -1465,9 +1465,9 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "('path_length = ', None)\n",
-        "[1.218311590278919, 1.1970266427491114, None, None, 0.9833107453200306, 1.244245089901215, 1.0309977618412147, None, None, None, 1.075802156576058, None, 0.6219324792610125, 0.5721827866989889, 0.920249314079676, 1.2891053696836148, None, 0.783613230439826, 0.924711168444099, None]\n",
-        "8\n"
+        "('path_length = ', 0.8168552119625007)\n",
+        "[1.1718678279656989, 1.2151614562400337, 1.1634431354093144, None, 0.9289617729560509, None, 1.031911078885529, None, None, None, 1.0283955070989743, None, 0.7080028424437519, 0.752083167674103, 0.9982550913744923, 1.2162178101845538, None, 0.8219952123008457, 0.9405408301712626, 0.8168552119625007]\n",
+        "7\n"
        ]
       },
       {
@@ -1479,7 +1479,7 @@
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
