--- a/Model-RF-p7.ipynb
+++ b/Model-RF-p7.ipynb
@@ -2815,6 +2815,40 @@
       "('c_sample.shape = ', (450, 104))\n",
       "('count = ', 5, ' path_lengths = ', [0.3221173537615224, 0.9459798563017874, 0.6695319038537735, 0.6847836230382683, 0.5293216456813381])\n",
       "('count = ', 10)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 10, ' path_lengths = ', [1.1870916871598038, 1.0211268296461642, 0.8724713497774561, 1.3639503305890395, 0.7735325600888753])\n",
+      "('count = ', 15)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 15, ' path_lengths = ', [0.5455411158713627, 0.643970994331583, 1.0010100146600176, 0.7350293089534046, 0.9756943964416158])\n",
+      "('count = ', 20)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 20, ' path_lengths = ', [0.6776332816383152, 0.4181957164782941, 0.6039323479036027, 0.9690952067127315, 0.9141998528009531])\n",
+      "('count = ', 25)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 25, ' path_lengths = ', [0.6896551807849337, 0.9746709243880247, 0.9214312644477535, 1.2260900147070504, 0.6638225106688275])\n",
+      "('count = ', 30)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 30, ' path_lengths = ', [0.3194935108951485, 0.9189468260248435, 0.4504159051303529, 0.4876090920619732, 0.46329001857942154])\n",
+      "('count = ', 35)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('Exception= ', NetworkXNoPath('Node g2 not reachable from s2',))\n",
+      "('count = ', 35, ' path_lengths = ', [0.6931116781958773, 0.7781560008121485, -1, 0.8112959474567294, 0.97008950965954])\n",
+      "('count = ', 40)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 40, ' path_lengths = ', [0.6324758765573496, 0.9562794694644582, 0.6190673136866726, 0.9395359483604913, 0.8300635573807399])\n",
+      "('count = ', 45)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 45, ' path_lengths = ', [0.819834109878902, 0.8792522678320139, 0.864557160808772, 0.6268365462939287, 0.8807114067148459])\n",
+      "('count = ', 50)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 50, ' path_lengths = ', [0.6258515880667332, 1.1620085938191114, 0.7855341663914646, 0.44810344151834663, 1.1105535588075615])\n",
+      "('count = ', 55)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('Exception= ', NetworkXNoPath('Node g1 not reachable from s1',))\n",
+      "('Exception= ', NetworkXNoPath('Node g2 not reachable from s2',))\n",
+      "('Exception= ', NetworkXNoPath('Node g3 not reachable from s3',))\n",
+      "('count = ', 55, ' path_lengths = ', [0.8365268286844012, -1, -1, -1, 0.7913927632425807])\n",
+      "('count = ', 60)\n",
       "('c_sample.shape = ', (450, 104))\n"
      ]
     }
