--- a/Model-RF.ipynb
+++ b/Model-RF.ipynb
@@ -1431,6 +1431,15 @@
       "('--------------------------------Num_Viz = ', 2000)\n",
       "('--------------------------------------lmbda = ', 1)\n",
       "('count = ', 0)\n",
+      "('c_sample.shape = ', (1000, 104))\n",
+      "('count = ', 0, ' path_lengths = ', [1.634146943653337, 1.1744134259295826, 1.4917032242665274, 1.253883739325333, 1.2751259369069334])\n",
+      "('count = ', 5)\n",
+      "('c_sample.shape = ', (1000, 104))\n",
+      "('count = ', 5, ' path_lengths = ', [0.3225799636588403, 0.9456144592550113, 0.6757926266435705, 0.6880601343620619, 0.5300154638448714])\n",
+      "('count = ', 10)\n",
+      "('c_sample.shape = ', (1000, 104))\n",
+      "('count = ', 10, ' path_lengths = ', [1.178870982734218, 1.0156158759619918, 0.868938416884483, 1.3631110482016204, 0.7691662467570992])\n",
+      "('count = ', 15)\n",
       "('c_sample.shape = ', (1000, 104))\n"
      ]
     }
