--- a/Model-RF-p7.ipynb
+++ b/Model-RF-p7.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -2849,7 +2849,106 @@
       "('Exception= ', NetworkXNoPath('Node g3 not reachable from s3',))\n",
       "('count = ', 55, ' path_lengths = ', [0.8365268286844012, -1, -1, -1, 0.7913927632425807])\n",
       "('count = ', 60)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 60, ' path_lengths = ', [0.7965912789503907, 0.5832276851464939, 0.5947044060163542, 0.5876253051030715, 0.6182029690048882])\n",
+      "('count = ', 65)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 65, ' path_lengths = ', [1.2178612899794496, 0.9547933857712656, 1.3602195155837702, 1.0080619750102882, 0.6646055631157826])\n",
+      "('count = ', 70)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 70, ' path_lengths = ', [0.7796185198832838, 0.8256097746620974, 1.129953734081447, 0.8025136347370656, 0.5077976022791313])\n",
+      "('count = ', 75)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 75, ' path_lengths = ', [0.4441319165789403, 0.7550428470442923, 0.6171567541100782, 0.5468349392642832, 0.47397919524618765])\n",
+      "('count = ', 80)\n",
       "('c_sample.shape = ', (450, 104))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('count = ', 80, ' path_lengths = ', [0.9256640085682042, 0.4946977111398574, 0.5760201200500236, 1.0777590643913422, 0.5680492231260694])\n",
+      "('count = ', 85)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 85, ' path_lengths = ', [0.9110052874043938, 1.0190088696429707, 0.8123206336195082, 0.7574724733064698, 0.8055694567233923])\n",
+      "('count = ', 90)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 90, ' path_lengths = ', [0.6361893359126946, 0.40547778175187765, 0.9541493181575404, 0.5745431609696858, 0.36696171666313493])\n",
+      "('count = ', 95)\n",
+      "('c_sample.shape = ', (450, 104))\n",
+      "('count = ', 95, ' path_lengths = ', [0.513041677139438, 0.7919752070764389, 0.8589334305014074, 0.8992216026101685, 0.34709592585832655])\n",
+      "[0.513041677139438, 0.7919752070764389, 0.8589334305014074, 0.8992216026101685, 0.34709592585832655]\n",
+      "0\n",
+      "('failed = ', 0)\n",
+      "('path_lengths = ', [0.513041677139438, 0.7919752070764389, 0.8589334305014074, 0.8992216026101685, 0.34709592585832655])\n",
+      "('--------------------------------Num_Viz = ', 2000)\n",
+      "('--------------------------------------lmbda = ', 1)\n",
+      "('count = ', 0)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 0, ' path_lengths = ', [1.6349278178352182, 1.1753166429559647, 1.4964431120182642, 1.257420425266865, 1.2775431662719687])\n",
+      "('count = ', 5)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 5, ' path_lengths = ', [0.32265282780527343, 0.9439986711086956, 0.6620983409264265, 0.6834620188835405, 0.5297156809417067])\n",
+      "('count = ', 10)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 10, ' path_lengths = ', [1.1804512685535509, 1.0110892369054647, 0.8702183483554813, 1.3619073332428846, 0.7710390392378139])\n",
+      "('count = ', 15)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 15, ' path_lengths = ', [0.5403080464997461, 0.6403046107034142, 0.9951616639866674, 0.7316978791249814, 0.9741343641739003])\n",
+      "('count = ', 20)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 20, ' path_lengths = ', [0.6771245802768442, 0.4181924158974008, 0.5986094334406828, 0.9660916539827971, 0.9122142246036411])\n",
+      "('count = ', 25)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 25, ' path_lengths = ', [0.6794580549732493, 0.963194609203033, 0.920993533222537, 1.2204879664913404, 0.6630078811046003])\n",
+      "('count = ', 30)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 30, ' path_lengths = ', [0.32039306748778357, 0.9195858886976773, 0.45051594092868313, 0.4869886319222575, 0.46238020664010204])\n",
+      "('count = ', 35)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('Exception= ', NetworkXNoPath('Node g2 not reachable from s2',))\n",
+      "('count = ', 35, ' path_lengths = ', [0.6921762893967787, 0.7756318800757465, -1, 0.8100572761015443, 0.9690849861857513])\n",
+      "('count = ', 40)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 40, ' path_lengths = ', [0.631473554505854, 0.9614294484293366, 0.6191280740295921, 0.941439029568791, 0.8351685412624431])\n",
+      "('count = ', 45)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 45, ' path_lengths = ', [0.8174301252704277, 0.8800686422611392, 0.8689222710898266, 0.6259409839737669, 0.8836014189226588])\n",
+      "('count = ', 50)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 50, ' path_lengths = ', [0.624318844284505, 1.160867840442589, 0.7839674423000041, 0.4474822276951296, 1.1035300216530934])\n",
+      "('count = ', 55)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 55, ' path_lengths = ', [0.8314099678411614, 0.617011615063419, 0.6643643634112281, 0.7698086087912467, 0.7893449528708582])\n",
+      "('count = ', 60)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 60, ' path_lengths = ', [0.8083722963189108, 0.5817881449804043, 0.5932261266158582, 0.5866201828636638, 0.617043725614049])\n",
+      "('count = ', 65)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 65, ' path_lengths = ', [1.2171889680825032, 0.9550239949606547, 1.3614203012516677, 1.0076045509214757, 0.6595588358550439])\n",
+      "('count = ', 70)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 70, ' path_lengths = ', [0.7693849972351399, 0.8162387607516043, 1.1314976524681397, 0.7919001426500744, 0.5075378474061296])\n",
+      "('count = ', 75)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 75, ' path_lengths = ', [0.4501763850868616, 0.7547758100119375, 0.6176359124582068, 0.5487564594109978, 0.4717974304583308])\n",
+      "('count = ', 80)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 80, ' path_lengths = ', [0.9243166137436045, 0.4786063076223266, 0.574969902478503, 1.0752227178214047, 0.5622874009840004])\n",
+      "('count = ', 85)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 85, ' path_lengths = ', [0.9088274408282582, 1.020336059151394, 0.8143971119505243, 0.7544674749594632, 0.8061628082255778])\n",
+      "('count = ', 90)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 90, ' path_lengths = ', [0.6437304456349331, 0.4036310801811013, 0.9575635051478806, 0.5677414307788253, 0.36564241108052026])\n",
+      "('count = ', 95)\n",
+      "('c_sample.shape = ', (600, 104))\n",
+      "('count = ', 95, ' path_lengths = ', [0.5147226514086085, 0.7916859849003723, 0.8578099618158251, 0.8953451132716685, 0.35191750725898124])\n",
+      "[0.5147226514086085, 0.7916859849003723, 0.8578099618158251, 0.8953451132716685, 0.35191750725898124]\n",
+      "0\n",
+      "('failed = ', 0)\n",
+      "('path_lengths = ', [0.5147226514086085, 0.7916859849003723, 0.8578099618158251, 0.8953451132716685, 0.35191750725898124])\n"
      ]
     }
    ],
